[package]
name = "grepo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde = "1.0.160"
serde_json = "0.9.10"
serde_derive = "1.0.160"
clap = { version = "3.2.23", features = ["derive"] } #3.2.23
git2 = "0.17.1"
dialoguer = "0.10.4"
chrono = "0.4.24"
tabled = "0.12.0"