[package]
name = "grepo"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde = "1.0.160"
serde_json = "1.0.96"
serde_derive = "1.0.160"
clap = { version = "4.3.0", features = ["derive"] } 
git2 = "0.17.1"
dialoguer = "0.10.4"
chrono = "0.4.24"
tabled = "0.12.0"